--- a/index.html
+++ b/index.html
@@ -79,16 +79,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <div class="paint-can-animation">
-                    <div class="paint-can">
-                        <i class="fas fa-paint-roller"></i>
-                    </div>
-                    <div class="paint-drops">
-                        <div class="drop"></div>
-                        <div class="drop"></div>
-                        <div class="drop"></div>
-                    </div>
-                </div>
+                <img src="images/PHOTO-2025-07-10-16-34-27.jpg" alt="Radhey Paints Store" class="hero-store-img">
             </div>
         </div>
         <div class="scroll-indicator">
@@ -159,9 +150,7 @@
             <div class="brands-content">
                 <div class="brand-card featured">
                     <div class="brand-logo">
-                        <div class="brand-placeholder asian-paints">
-                            <i class="fas fa-paint-roller"></i>
-                        </div>
+                        <img src="images/asian.png" alt="Asian Paints Logo" class="brand-img">
                     </div>
                     <div class="brand-info">
                         <h3>Asian Paints</h3>
@@ -176,9 +165,7 @@
                 </div>
                 <div class="brand-card featured">
                     <div class="brand-logo">
-                        <div class="brand-placeholder nippon-paints">
-                            <i class="fas fa-spray-can"></i>
-                        </div>
+                        <img src="images/nippon.png" alt="Nippon Paints Logo" class="brand-img">
                     </div>
                     <div class="brand-info">
                         <h3>Nippon Paints</h3>
